--- a/domain/composer.json
+++ b/domain/composer.json
@@ -11,30 +11,22 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "IXCSoft\\TreinamentoDocker\\Domain\\Tests\\Integration\\": "tests/integration",
-      "IXCSoft\\TreinamentoDocker\\Domain\\Tests\\Unit\\": "tests/unit"
+      "IXCSoft\\TreinamentoDocker\\Domain\\Tests\\Integration\\": "tests/integration"
     }
   },
   "require": {
     "php": "^8.1",
     "ext-apcu": "*",
-    "ext-json": "*",
     "ext-pdo": "*",
     "ext-pdo_pgsql": "*",
-    "ext-xml": "*",
     "ext-memcached": "*",
     "ext-redis": "*",
-    "ext-zip": "*",
     "doctrine/dbal": "^3.5",
     "doctrine/orm": "^2.13",
-    "slim/psr7": "^1.6",
-    "slim/slim": "^4.11",
-    "symfony/cache": "^6.1",
-    "symfony/yaml": "^6.1"
+    "symfony/cache": "6.1.*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "mikey179/vfsstream": "^1.6"
+    "phpunit/phpunit": "^9.5"
   },
   "version": "dev-master"
 }
