--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 /.idea/
-/app/.idea/
-/app/.phpunit.cache/
-/app/composer.lock
-/app/var/
-/app/vendor/
+/treinamento-docker-app/.idea/
+/treinamento-docker-app/.phpunit.cache/
+/treinamento-docker-app/composer.lock
+/treinamento-docker-app/var/
+/treinamento-docker-app/vendor/
 /.phpunit.cache/
-/app/configs/*.yml
-/app/configs/*.ini
-/domain/.idea/
-/domain/.phpunit.cache/
-/domain/vendor/
+/treinamento-docker-app/configs/*.yml
+/treinamento-docker-app/configs/*.ini
+/treinamento-docker-domain/.idea/
+/treinamento-docker-domain/.phpunit.cache/
+/treinamento-docker-domain/vendor/
+
